<resources>
    <string name="app_name">PokeApp</string>
    <string name="pokemon">Pokemon</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="type">Type</string>
    <string name="experience">EXP</string>
    <string name="speed">SPD</string>
    <string name="hp">HP</string>
    <string name="attack">ATK</string>
    <string name="defense">DEF</string>
    <string name="base_stats">Base Stats</string>
    <string name="about">About</string>
</resources>