<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.pokeapp.viewmodels.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/img_pokemon"
            android:src="@drawable/pokeball_slant"
            android:alpha="0.3"
            app:layout_constraintEnd_toEndOf="@+id/img_pokemon"
            app:layout_constraintStart_toStartOf="@+id/img_pokemon"
            app:layout_constraintTop_toTopOf="@+id/img_pokemon"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/pokemon" />


        <ImageView
            android:id="@+id/img_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_name_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:img_url="@{viewModel.selectedPokemon.sprites.other.official_artwork.front_default}"
            app:layout_constraintHorizontal_bias="0.5"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/pokemon" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/txt_height"
            app:layout_constraintEnd_toStartOf="@+id/txt_name_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            app:layout_constraintBottom_toTopOf="@+id/txt_weight"
            app:layout_constraintEnd_toEndOf="@+id/txt_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <TextView
            android:id="@+id/txt_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            app:layout_constraintBottom_toTopOf="@+id/txt_type"
            app:layout_constraintEnd_toEndOf="@+id/txt_height"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_height"
            app:layout_constraintTop_toBottomOf="@+id/txt_height" />

        <TextView
            android:id="@+id/txt_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            app:layout_constraintBottom_toTopOf="@+id/txt_speed"
            app:layout_constraintEnd_toEndOf="@+id/txt_weight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_weight"
            app:layout_constraintTop_toBottomOf="@+id/txt_weight" />

        <TextView
            android:id="@+id/txt_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            app:layout_constraintBottom_toTopOf="@+id/txt_hp"
            app:layout_constraintEnd_toEndOf="@+id/txt_type"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_type"
            app:layout_constraintTop_toBottomOf="@+id/txt_type" />

        <TextView
            android:id="@+id/txt_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp"
            app:layout_constraintBottom_toTopOf="@+id/txt_special_attack"
            app:layout_constraintEnd_toEndOf="@+id/txt_speed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_speed"
            app:layout_constraintTop_toBottomOf="@+id/txt_speed" />

        <TextView
            android:id="@+id/txt_special_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special_attack"
            app:layout_constraintBottom_toTopOf="@+id/txt_special_defence"
            app:layout_constraintEnd_toEndOf="@+id/txt_hp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_hp"
            app:layout_constraintTop_toBottomOf="@+id/txt_hp" />

        <TextView
            android:id="@+id/txt_special_defence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special_defence"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt_special_attack"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_special_attack"
            app:layout_constraintTop_toBottomOf="@+id/txt_special_attack" />

        <TextView
            android:id="@+id/txt_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.selectedPokemon.name}"
            tools:text="@tools:sample/first_names"
            app:layout_constraintBottom_toTopOf="@+id/txt_height_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_name"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/txt_height_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/date/hhmm"
            android:text="@{String.valueOf(viewModel.selectedPokemon.height)}"
            app:layout_constraintBottom_toTopOf="@+id/txt_weight_value"
            app:layout_constraintEnd_toEndOf="@+id/txt_name_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_name_value"
            app:layout_constraintTop_toBottomOf="@+id/txt_name_value" />

        <TextView
            android:id="@+id/txt_weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/date/hhmm"
            android:text="@{String.valueOf(viewModel.selectedPokemon.weight)}"
            app:layout_constraintBottom_toTopOf="@+id/txt_type_value"
            app:layout_constraintEnd_toEndOf="@+id/txt_height_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_height_value"
            app:layout_constraintTop_toBottomOf="@+id/txt_height_value" />

        <TextView
            android:id="@+id/txt_type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/last_names"
            android:text="@{viewModel.selectedPokemon.types[0].type.name}"
            app:layout_constraintBottom_toTopOf="@+id/txt_speed_value"
            app:layout_constraintEnd_toEndOf="@+id/txt_weight_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_weight_value"
            app:layout_constraintTop_toBottomOf="@+id/txt_weight_value" />

        <TextView
            android:id="@+id/txt_speed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/last_names"
            android:text="@{String.valueOf(viewModel.selectedPokemon.stats[5].base_stat)}"
            app:layout_constraintBottom_toTopOf="@+id/txt_hp_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_speed"
            app:layout_constraintTop_toBottomOf="@+id/txt_type_value" />

        <TextView
            android:id="@+id/txt_hp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/last_names"
            android:text="@{String.valueOf(viewModel.selectedPokemon.stats[0].base_stat)}"
            app:layout_constraintBottom_toTopOf="@+id/txt_special_attack_value"
            app:layout_constraintEnd_toEndOf="@+id/txt_speed_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_speed_value"
            app:layout_constraintTop_toBottomOf="@+id/txt_speed_value" />

        <TextView
            android:id="@+id/txt_special_attack_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/last_names"
            android:text="@{String.valueOf(viewModel.selectedPokemon.stats[3].base_stat)}"
            app:layout_constraintBottom_toTopOf="@+id/txt_special_defence_value"
            app:layout_constraintEnd_toEndOf="@+id/txt_hp_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_hp_value"
            app:layout_constraintTop_toBottomOf="@+id/txt_hp_value" />

        <TextView
            android:id="@+id/txt_special_defence_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/last_names"
            android:text="@{String.valueOf(viewModel.selectedPokemon.stats[4].base_stat)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt_special_attack_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_special_attack_value"
            app:layout_constraintTop_toBottomOf="@+id/txt_special_attack_value" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>